--- a/The pracitcally impossible quiz.html
+++ b/The pracitcally impossible quiz.html
@@ -201,7 +201,7 @@ By the way, if you scroll down to here, don&#39;t listen to advice.</tw-passaged
 
 
 Or did you?
-[[Continue]]](else:)[&lt;img src=&quot;https://media3.giphy.com/media/XUFPGrX5Zis6Y/giphy.gif&quot; You lost! Yay! https://www.youtube.com/watch?v=qrBB3_rFPjg&gt; You are a ****ing dumbass, you lost!]</tw-passagedata><tw-passagedata pid="17" name="just" tags="" position="725,1250" size="100,100">Wrong?
+[[Continue]]](else:)[&lt;img src=&quot;https://media3.giphy.com/media/XUFPGrX5Zis6Y/giphy.gif&quot; You lost! Yay! https://www.youtube.com/watch?v=qrBB3_rFPjg&gt; You are dumb, you lost!]</tw-passagedata><tw-passagedata pid="17" name="just" tags="" position="725,1250" size="100,100">Wrong?
 
 [[Restart]]</tw-passagedata><tw-passagedata pid="18" name="I quit" tags="" position="475,1250" size="100,100">Wrong?
 
@@ -257,7 +257,7 @@ Do you understand?
 [[Question 10]]
 [[I]](this is totally question 1, don&#39;t click it!)
 </tw-passagedata><tw-passagedata pid="33" name="Question 10" tags="" position="300,2025" size="100,100">(text-colour:black)[[Click this to win!]]
-(set:$q10 to (prompt:&quot;Suck me hard&quot;,&quot;&quot;))
+(set:$q10 to (prompt:&quot;Sussy nubmer&quot;,&quot;&quot;))
 (if:$q10 is &quot;69&quot;)[Okay [[Question 11]]](else:)[Um..., why? [[Restart]]]</tw-passagedata><tw-passagedata pid="34" name="Click this to win!" tags="" position="700,1800" size="100,100">You win...
 &lt;img src=&quot;https://static.wikia.nocookie.net/impossible-quiz/images/f/f1/TIQ-Complete%21.png/revision/latest/scale-to-width-down/250?cb=20140408182843&quot;&gt;
 You can go through all that hell again.
